<resources>
    <string name="app_name">AppMarket</string>
    <string name="app_name1">APP MARKET</string>
    <string name="text_recommend">Recommended</string>
    <string name="text_video">Video</string>
    <string name="text_ktv">Karaoke</string>
    <string name="text_game">Games</string>
    <string name="text_im">IM</string>
    <string name="text_music">Music</string>
    <string name="text_tools">Tools</string>
    <string name="text_summary">Summary:</string>
    <string name="text_type">Type: </string>
    <string name="text_version">Version: </string>
    <string name="text_size">Size: </string>
    <string name="text_language">Language: </string>
    <string name="text_download">Download</string>
    <string name="text_update">Update</string>
    <string name="text_downloading">Downloading</string>
    <string name="text_install">Install</string>
    <string name="text_launch">Launch</string>
    <string name="exit_toast">Press back key down again exit program</string>

    <string name="warning_title">Warning</string>
    <string name="warning_message1">This Device is not allowed!</string>
    <string name="warning_exit">Exit</string>
    <string name="notice_title">Notice</string>
    <string name="notice_message">The program have a new version ,update now?</string>
    <string name="confirm">Confirm</string>
    <string name="download_error">download progress fail ,please reboot program and download again!</string>
    <string name="copyright">Copyright © 2016-2017 LegacyDirect  All Rights Reserved</string>


</resources>
