<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="10dp"
    android:background="@drawable/mainbg3"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_marginBottom="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <ImageView
            android:src="@drawable/logo"
            android:layout_marginRight="10dp"
            android:layout_weight="1.2"
            android:layout_width="0dp"
            android:layout_height="80dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1.2"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <ImageView
                android:layout_gravity="center_horizontal"
                android:id="@+id/iv_AppIcon"
                android:src="@mipmap/ic_launcher"
                android:layout_width="80dp"
                android:layout_height="80dp" />
            <TextView
                android:layout_marginBottom="5dp"
                android:id="@+id/tv_AppName"
                android:text="AppName"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginBottom="5dp"
                android:id="@+id/tv_AppType"
                android:textColor="@color/colorWhite"
                android:text="@string/text_type"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginBottom="5dp"
                android:id="@+id/tv_AppSize"
                android:textColor="@color/colorWhite"
                android:text="@string/text_size"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginBottom="5dp"
                android:id="@+id/tv_AppVersion"
                android:textColor="@color/colorWhite"
                android:text="@string/text_version"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginBottom="5dp"
                android:id="@+id/tv_AppLanuage"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:textColor="@color/colorWhite"
                android:text="@string/text_language"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:layout_marginBottom="5dp"
                android:text="@string/text_download"
                android:id="@+id/bt_Download"
                android:background="@drawable/button_blue"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_Progress_1"
                android:textSize="20sp"
                android:visibility="gone"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/colorGreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ProgressBar
                android:visibility="gone"
                style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                android:id="@+id/pb_DownloadProgress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:padding="5dp"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <TextView
                android:layout_marginBottom="5dp"
                android:text="@string/text_summary"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="18sp"
                    android:textColor="@color/colorWhite"
                    android:id="@+id/tv_AppSummary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </ScrollView>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>